--- a/trivia.css
+++ b/trivia.css
@@ -4,8 +4,8 @@
     background-color: slategrey;
 }
 body {
-    font-family: 'Aclonica';
-    font-size: 28px; 
+    font-family: 'Asset';
+    font-size: 20px; 
     color: pink;
     text-align: center;
     border: 5px solid;
@@ -23,4 +23,9 @@ button {
     background-color: purple;
     text-align: center;
     padding: 10px;
+}
+#question {
+    color: ivory;
+    font-family: 'Aclonica';
+
 }
